# mylib

./: .cproject  .project  CMakeLists.txt  read.me
include/: a.h
src/: a.c
verify/: CMakeLists.txt
verify/source/: a_config.h  mylib_test.c
